Using toList() instead of Collectors.toList